structural-typing/tests/ui/serde_skip_deserializing_rejected.stderr
error: structural typing does not support #[serde(skip)] or #[serde(skip_deserializing)]
 --> tests/ui/serde_skip_deserializing_rejected.rs:8:5
  |
8 |     #[serde(skip_deserializing)]
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
